# tokenfactorytest

./: Cargo.toml  README.md  build_release.sh  rustup.sh
artifacts/: checksums.txt  checksums_intermediate.txt  tokenfactory_hooks.wasm
contracts/tokenfactory_hooks/: Cargo.toml
contracts/tokenfactory_hooks/src/: contract.rs  state.rs
scripts/: 0_docker_setup.sh  0_setup.py  1_docker_py_env_setup.sh  2_docker_shell_run.sh  3_test_hooks.py  helpers.py  requirements.txt
scripts/proto/cosmos/bank/v1beta1/: __init__.py
scripts/proto/osmosis/gamm/poolmodels/balancer/v1beta1/: __init__.py
scripts/proto/osmosis/gamm/poolmodels/stableswap/v1beta1/: __init__.py
scripts/proto/osmosis/gamm/v1beta1/: __init__.py
scripts/proto/osmosis/incentives/: __init__.py
scripts/proto/osmosis/lockup/: __init__.py
scripts/proto/osmosis/poolincentives/v1beta1/: __init__.py
scripts/proto/osmosis/superfluid/: __init__.py
scripts/proto/osmosis/tokenfactory/v1beta1/: __init__.py
