[package]
name = "tokenfactory-hooks"
version = "0.1.0"
authors = ["Ninetyfour"]
edition = "2018"
license = "Apache-2.0"
description = ""
repository = ""

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "1.2.0", features = ["iterator", "stargate"] }
cw-storage-plus = { version = "1.0.1", features = ["iterator"]}
zodiac = { path = "../../packages/zodiac", default-features = false, version = "0.1.0"}
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
hex = "0.4"
cw-asset = "2.2.0"
osmosis-std = { git = "https://github.com/osmosis-labs/osmosis-rust.git", rev = "dc1bfbd" }
cosmos-sdk-proto = { version = "0.18.0", default-features = false, features = ["cosmwasm"] } # mio extra imports break everything
prost = "0.11"